Alignment fix?

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -4,7 +4,8 @@ body, html {
   background-size: cover;
 }
 .question-head.col.s4{
-  width: 260px;
+  margin-right: 5px;
+  width: 262px;
 }
 .chip {
   background-color: #de4a3e;
@@ -118,17 +119,16 @@ body, html {
 .expiration {
   height: 100%;
   text-align: right;
+  min-width: 200px;
+  margin-left: 110px;
 }
 
 .timeago {
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding:13px 7px;
   color: black;
   width: 150px;
   background-color: white;
-  font-size: 18 px;
+  font-size: 15px;
   height: 100px;
   line-height: 50px;
 }
@@ -169,7 +169,7 @@ body, html {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  padding-left: 5px;
+  padding-left: 20px;
   text-align: left;
   color: black;
 }
@@ -191,7 +191,7 @@ body, html {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  padding-left: 11px;
+  padding-left: 15px;
   text-align: left;
   color: black;
 }
@@ -281,7 +281,8 @@ margin-top: 10px;
 }
 
 .created-by {
+  background: #fff;
   font-size: 15px;
   margin: auto;
-  width: 300px;
+  width: 350px;
 }
